fix(web): don't wrap white spaces in side-wrapper

--- a/packages/uhk-web/src/app/components/slider-wrapper/slider-wrapper.component.scss
+++ b/packages/uhk-web/src/app/components/slider-wrapper/slider-wrapper.component.scss
@@ -25,5 +25,6 @@
     .value-indicator {
         margin: 1rem 1rem 1rem 3rem;
         vertical-align: middle;
+        white-space: nowrap;
     }
 }
